[package]
name = "diskfire"
version = "0.1.0"
edition = "2021"
authors = ["DanyalMhai@gmail.com"]
readme = "README.md"
description = "NonBlocking, Blazing fast disk based logger"
license = "Apache-2.0"
keywords = ["in-memory", "storage", "durable", "high-concurrency", "database"]
homepage   = "https://github.com/Rustixir/darkbird"
repository = "https://github.com/Rustixir/darkbird"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

simple_wal = "0.3.0"
crossbeam = { version = "0.8.1", features= ["crossbeam-channel"]}





[profile.release]
opt-level = 3


[profile.dev]
otp-level = 3